--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | demo_project</title>
+    <style>
+    canvas#unity-canvas {
+        width: 100%;
+        height: 100%;
+    }
+    
+    </style>
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" style="width: 960px; height: 600px; background: #231F20"></canvas>
