--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
         width: 100%;
         height: 100%;
     }
-    
     </style>
   </head>
   <body style="text-align: center">
-    <canvas id="unity-canvas" style="width: 960px; height: 600px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" style="background: #231F20"></canvas>
     <script src="Build/webgl.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
