--- a/index.html
+++ b/index.html
@@ -9,10 +9,51 @@
         width: 100%;
         height: 100%;
     }
+
+    .unity-container {
+        display: block; 
+        position: absolute;
+        top:0px; 
+        left:0px;
+        width: 110%; 
+        height: auto; 
+        padding: 0px; 
+        margin: 0px; 
+        border: 0px;
+        background: rgba(255, 255, 255, 0);
+    }
+
+    .rotate-bg {
+        position: absolute;
+        left: 0px;
+        display:block; 
+        background-color: black; 
+        opacity: 80%; 
+        width: 110%; 
+        height: 100vh; 
+        padding: 0px; 
+        margin: 0px; 
+        border: 0px;
+    }
+
+    .rotate-img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 50%;
+        height: auto;
+        transform: translate(-50%, -50%);
+    }
+
     </style>
   </head>
-  <body style="text-align: center">
-    <canvas id="unity-canvas" style="background: #231F20"></canvas>
+  <body style="text-align: center; background-color: black; border: 0px; margin: 0px; overflow: hidden;">
+    <div class="unity-container" id="unity-container">
+      <canvas id="unity-canvas" style="background: #231F20;"></canvas>
+    </div>
+    <div class="rotate-bg" id="rotate-suggest" onclick="popup_hide()">
+      <img class="rotate-img" src="screen-rotate.png" draggable="false">
+    </div>
     <script src="Build/webgl.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
@@ -24,6 +65,32 @@
         productName: "demo_project",
         productVersion: "0.1",
       });
+    </script>
+    <script>
+      getratio();
+      function getratio() {
+        var height = window.innerHeight;
+        var width = window.innerWidth;
+        var ratio = height/width;
+        if (ratio > 1.2) {
+          popup_show();
+        } else {
+          popup_hide();
+        }
+      }
+
+      function popup_hide() {
+        document.getElementById("rotate-suggest").style.display = "none";
+      }
+      
+      function popup_show() {
+        document.getElementById("rotate-suggest").style.display = "block";
+      }
+
+      window.onresize = function(event) {
+        getratio();
+      }
+    
     </script>
   </body>
 </html>
