changes to popup

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       background-color: black;
       opacity: 80%;
       width: 110%;
-      height: 100vh;
+      height: 110%;
       padding: 0px;
       margin: 0px;
       border: 0px;
