--- a/index.html
+++ b/index.html
@@ -65,6 +65,44 @@
     <p>Please view in landscape mode!</p>
   </div>
   <script>
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/webgl.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/webgl.data",
+      frameworkUrl: buildUrl + "/webgl.framework.js",
+      codeUrl: buildUrl + "/webgl.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "16-bit Production",
+      productName: "demo_project",
+      productVersion: "0.1",
+    };
+
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        container.className = "unity-mobile";
+        config.devicePixelRatio = 1;
+      }
+
+    loadingBar.style.display = "block";
+
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+      }).catch((message) => {
+        alert(message);
+      });
+    };
+    document.body.appendChild(script);
+  </script>
+  <script>
     getratio();
     function getratio() {
       var height = window.innerHeight;
@@ -88,40 +126,6 @@
     window.onresize = function (event) {
       getratio();
     }
-
-    var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/webgl.loader.js";
-    var config = {
-      dataUrl: buildUrl + "/webgl.data",
-      frameworkUrl: buildUrl + "/webgl.framework.js",
-      codeUrl: buildUrl + "/webgl.wasm",
-      streamingAssetsUrl: "StreamingAssets",
-      companyName: "16-bit Production",
-      productName: "demo_project",
-      productVersion: "0.1",
-    };
-
-    var container = document.querySelector("#unity-container");
-    var canvas = document.querySelector("#unity-canvas");
-    var loadingBar = document.querySelector("#unity-loading-bar");
-    var progressBarFull = document.querySelector("#unity-progress-bar-full");
-    // var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-
-    loadingBar.style.display = "block";
-
-    var script = document.createElement("script");
-    script.src = loaderUrl;
-    script.onload = () => {
-      createUnityInstance(canvas, config, (progress) => {
-        progressBarFull.style.width = 100 * progress + "%";
-      }).then((unityInstance) => {
-        loadingBar.style.display = "none";
-      }).catch((message) => {
-        alert(message);
-      });
-    };
-    document.body.appendChild(script);
-
   </script>
 </body>
 
